remove all implementation which doesn't work with DB